--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,16 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,500;1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,700;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,800;1,800&display=swap");
 :root {
-  --Lightred: hsl(0, 100%, 67%);
-  --Orangeyyellow: hsl(39, 100%, 56%);
-  --Greenteal: hsl(166, 100%, 37%);
-  --Cobaltblue: hsl(234, 85%, 45%);
+  --Light-red: hsla(0, 100%, 67%);
+  --Orangey-yellow: hsl(39, 100%, 56%);
+  --Green-teal: hsl(166, 100%, 37%);
+  --Cobalt-blue: hsl(234, 85%, 45%);
 
-  --Light-slate-blue: hsl(252, 100%, 67%); /*(background)*/
-  --Light-royal-blue: hsl(241, 81%, 54%); /*(background)*/
-  --Violet-blue: hsla(256, 72%, 46%, 1); /*(circle)*/
-  --Persian-blue: hsla(241, 72%, 46%, 0); /*(circle)*/
+  --Light-slate-blue-background: hsl(252, 100%, 67%);
+  --Light-royal-blue-background: hsl(241, 81%, 54%);
+  --Violet-blue-circle: hsla(256, 72%, 46%, 1);
+  --Persian-blue-circle: hsla(241, 72%, 46%, 0);
 
   --White: hsl(0, 0%, 100%);
   --Pale-blue: hsl(221, 100%, 96%);
@@ -18,79 +15,172 @@
   --Dark-gray-blue: hsl(224, 30%, 27%);
 }
 * {
-  margin: 0px;
-  padding: 0px;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
-}
-
-body {
-  font-size: 15px;
   font-family: "Hanken Grotesk", sans-serif;
-  font-optical-sizing: auto;
 }
-.main-container {
-  width: 400px;
-  height: 800px;
-  margin: 87px auto 80px;
-  overflow: hidden;
-}
-section {
-  width: 100%;
-  height: 370px;
-  padding: 40px;
-}
-/*----------------------------------------------------------------*/
-.first {
-  border-radius: 30px;
-  background: linear-gradient(
-    to bottom,
-    var(--Light-slate-blue),
-    var(--Light-royal-blue)
-  );
-  text-align: center;
-  color: var(--White);
-}
-.centro {
-  margin: auto;
-  width: 150px;
-  height: 150px;
-  border-radius: 100%;
-  background: linear-gradient(
-    to bottom,
-    var(--Violet-blue),
-    var(--Persian-blue)
-  );
-  padding: 6px;
-  justify-content: center; /* Centrar el contenido horizontalmente dentro de .centro */
-  color: var(--White);
-}
-h1 {
-  margin: 20px auto 0px;
-  padding: 8px;
-  font-size: 3em;
-}
-h3 {
-  margin: 8px auto 8px;
-  padding: 8px;
-  font-size: 1.5em;
-}
-.text {
-  font-size: 1em;
-  color: var(--Pale-blue);
-}
-p {
-  opacity: 0.7;
-}
-
-/*----------------------------------------------------------------*/
-.second {
-  border-radius: 0 0 30px 30px;
-  background: var(--White);
-  display: flex; /* Asegura que los elementos dentro estén alineados */
+body {
+  min-height: 100vh;
+  display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--Pale-blue);
+}
+.card {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 2rem;
+  width: 650px;
+  background-color: var(--White);
+}
+.card-container {
+  display: flex;
+  justify-content: space-between;
+}
+.result {
+  width: 50%;
+  padding: 1.5rem 2rem;
+  border-radius: 2rem;
+  background: linear-gradient(
+    to bottom,
+    var(--Light-slate-blue-background),
+    var(--Light-royal-blue-background)
+  );
   text-align: center;
-  color: red;
-  padding: 20px;
-  box-shadow: 2px 3px 0 0 var(--Dark-gray-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.result .title {
+  color: var(--Light-lavender);
+  margin-bottom: 1rem;
+}
+.result .circle {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: linear-gradient(
+    to bottom,
+    var(--Violet-blue-circle),
+    var(--Persian-blue-circle)
+  );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.circle h1 {
+  color: white;
+  font-size: 4rem;
+}
+.circle p {
+  color: var(--Light-lavender);
+}
+.result b {
+  color: white;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+}
+.result .info {
+  color: var(--Light-lavender);
+  width: 200px;
+}
+.summary {
+  width: 50%;
+  padding: 1.5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.summary .title {
+  color: black;
+  font-weight: 800;
+}
+.rows {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+.row {
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0.5rem;
+}
+.row:nth-child(1) {
+  background-color: hsla(0, 100%, 67%, 0.2);
+}
+.row:nth-child(1) .badge b {
+  color: var(--Light-red);
+}
+.row:nth-child(2) {
+  background-color: hsla(39, 100%, 56%, 0.2);
+}
+.row:nth-child(2) .badge b {
+  color: var(--Orangey-yellow);
+}
+.row:nth-child(3) {
+  background-color: hsla(166, 100%, 37%, 0.2);
+}
+.row:nth-child(3) .badge b {
+  color: var(--Green-teal);
+}
+.row:nth-child(4) {
+  background-color: hsla(234, 85%, 45%, 0.2);
+}
+.row:nth-child(4) .badge b {
+  color: var(--Cobalt-blue);
+}
+.badge {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.row p {
+  color: gray;
+}
+.row p b {
+  color: var(--Dark-gray-blue);
+}
+
+.btn {
+  margin-top: auto;
+  padding: 1rem;
+  border: none;
+  border-radius: 2rem;
+  background: var(--Dark-gray-blue);
+  cursor: pointer;
+  font-size: 1rem;
+  color: white;
+}
+.btn:hover {
+  background: linear-gradient(
+    to bottom,
+    var(--Light-slate-blue-background),
+    var(--Light-royal-blue-background)
+  );
+}
+@media screen and (max-width: 650px) {
+  body {
+    align-items: flex-start;
+    background-color: white;
+  }
+  .card {
+    box-shadow: none;
+  }
+  .card-container {
+    flex-direction: column;
+  }
+  .result {
+    border-radius: 0 0 1rem 1rem;
+    width: 100%;
+  }
+  .result .info {
+    width: 250px;
+  }
+  .summary {
+    width: 100%;
+  }
 }
